--- a/src/scss/content-block.scss
+++ b/src/scss/content-block.scss
@@ -23,7 +23,7 @@
 
  &__main { 
   padding: 24px 32px; 
-  
+
   @include tablet {
    padding: 24px;
   }
@@ -68,12 +68,12 @@
   }
  }
  &__commercial {
-  margin-top: 16px;
+  padding: 0 16px; 
   @include tablet {
-   margin-top: 24px;
+   padding: 0 24px;  
   }
   @include desktop {
-   margin-top: 32px;
+   padding: 0 32px;  
   }
   
  }
